--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@vercel/analytics": "^1.4.1",
@@ -25,14 +25,14 @@
     "cmdk": "^1.1.1",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.469.0",
-    "next": "15.1.3",
+    "next": "^15.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.55.0",
     "react-markdown": "^9.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
