--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
@@ -31,11 +32,11 @@
     "dotenv": "^16.4.7",
     "editorjs-html": "^4.0.5",
     "lucide-react": "^0.469.0",
+    "motion": "^12.16.0",
     "next": "^15.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
-    "react-markdown": "^9.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
