--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@editorjs/list": "^2.0.6",
     "@editorjs/paragraph": "^2.11.7",
     "@fontsource/mitr": "^5.1.1",
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -31,6 +32,7 @@
     "dompurify": "^3.2.5",
     "dotenv": "^16.4.7",
     "editorjs-html": "^4.0.5",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.469.0",
     "motion": "^12.16.0",
     "next": "^15.2.5",
