--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.6.1",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.469.0",
     "motion": "^12.23.1",
     "next": "^15.3.5",
