--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "dependencies": {
     "@fontsource/mitr": "^5.2.6",
@@ -45,6 +46,8 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9.31.0",
     "eslint-config-next": "15.1.3",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
