--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@fontsource-variable/caveat": "^5.2.6",
     "@fontsource/mitr": "^5.2.6",
     "@hookform/resolvers": "^3.10.0",
     "@microsoft/clarity": "^1.0.0",
